# drf-project

./: pyproject.toml
config/: settings.py
lms/: models.py  urls.py  views.py
lms/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
